--- a/configs/stress-test.conf
+++ b/configs/stress-test.conf
@@ -2,7 +2,7 @@
 # High-intensity testing for performance limits
 
 # DNS Server to test
-DNS_SERVER=8.8.8.8
+DNS_SERVER=your-dns-server.com
 
 # Query file to use
 QUERY_FILE=queries/mixed-queries.txt
