--- a/analyzer/pyproject.toml
+++ b/analyzer/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "matplotlib>=3.5.0",
     "pandas>=1.3.0",
     "seaborn>=0.11.0",
+    "numpy>=1.21.0",
 ]
 
 [project.scripts]
