--- a/configs/basic-test.conf
+++ b/configs/basic-test.conf
@@ -8,7 +8,7 @@ DNS_SERVER=8.8.8.8
 QUERY_FILE=queries/basic-queries.txt
 
 # Test duration in seconds
-DURATION=30
+DURATION=10
 
 # Queries per second
 QPS=100
@@ -19,5 +19,5 @@ CONCURRENT=1
 # Query timeout in seconds
 TIMEOUT=5
 
-# Additional dnsperf options
+# Additional dnsperf options｀
 EXTRA_OPTIONS="-v" 
