--- a/configs/basic-test.conf
+++ b/configs/basic-test.conf
@@ -7,17 +7,17 @@ DNS_SERVER=166.117.189.163
 # Query file to use
 QUERY_FILE=queries/basic-queries.txt
 
-# Test duration in seconds
-DURATION=10
+# Test duration in seconds｀
+DURATION=600
 
 # Queries per second
-QPS=10
+QPS=9000
 
 # Number of concurrent connections
-CONCURRENT=1
+CONCURRENT=256
 
 # Query timeout in seconds
-TIMEOUT=5
+TIMEOUT=15
 
 # Additional dnsperf options｀
-EXTRA_OPTIONS="-v" 
+EXTRA_OPTIONS="-v"
